@@ -5,6 +5,7 @@ Key:
 
 ~~~~~~~~~~~~0.0.1 Revitalize 10-31-2022 xx.xx P.M~~~~~~~~~~~~~~
 +The radioactive fuel cell blueprint can now be bought from Qi's wallnut room shop for 5 qi gems.
++Added Coal, Nuclear, and Magical mining drills.
 
 ~~~~~~~~~~~~0.0.1 Revitalize 10-30-2022 xx.xx P.M~~~~~~~~~~~~~~
 +Verified that minging drills work.
